--- a/index.html
+++ b/index.html
@@ -37,9 +37,14 @@
         placeholder="Email or phone number"
       />
       <input name="PW" type="password" required placeholder="Password" />
-      <input type="submit" value="Log In" />
+      <input
+        type="submit"
+        value="Log In"
+        onclick="location.href='friends.html'"
+      />
       <a href="#">Find Kakao Account or Password</a>
     </form>
+    <div id="splash-icon"><i class="fas fa-comment"></i></div>
 
     <script
       src="https://kit.fontawesome.com/0b25d3ca20.js"
