--- a/chat.html
+++ b/chat.html
@@ -89,7 +89,9 @@
         </li>
       </ul>
     </nav>
-
+    <div class="no-mobile">
+      <span>스크린 사이즈를 줄여주세요(휴대폰 처럼)</span>
+      <div>
     <script
       src="https://kit.fontawesome.com/0b25d3ca20.js"
       crossorigin="anonymous"
