--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
       <a href="#">Find Kakao Account or Password</a>
     </form>
     <div id="splash-icon"><i class="fas fa-comment"></i></div>
+    <div class="no-mobile">
+      <span>스크린 사이즈를 줄여주세요(휴대폰 처럼)</span>
+      <div>
 
     <script
       src="https://kit.fontawesome.com/0b25d3ca20.js"
